--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "axios": "^1.7.2",
     "dotenv": "^16.0.0",
-    "openai": "^3.0.0"
+    "openai": "^3.0.0",
+    "pg": "^8.12.0",
+    "uuid": "^10.0.0"
   },
   "author": "MoPaMo",
   "license": "SEE LICENSE IN LICENSE.md"
